--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "filewalker": "^0.1.2",
-    "find-remove": "^0.2.5",
-    "fs.extra": "^1.3.2",
     "git-exec": "^0.2.1",
-    "guid": "0.0.12",
     "ncp": "^1.0.1",
-    "q": "^2.0.2",
+    "node-uuid": "^1.4.7",
+    "promise": "^7.0.4",
     "rimraf": "^2.2.8",
     "temp": "^0.8.1"
   },
